<resources>
    <string name="app_name">Glowup</string>

    <!--MAIN ACTIVITY-->
    <string name="BtnLogin">Log in</string>
    <string name="BtnRegister">Register</string>

    <!--REGISTRATION ACTIVITY-->
    <string name="AccountCreationTxt">Create account</string>
    <string name="EtName">Name</string>
    <string name="EtMail">Email address</string>
    <string name="EtPassword">Password</string>
    <string name="EtConfirmPassword">Repeat password</string>
    <string name="RegisterUser">Log in</string>
    <string name="AlreadyAccount">Already have an account?</string>
    <string name="progress_loading">Loading...</string>
    <string name="RegisterSuccess">Account successfully created</string>
    <string name="RegisterError">Error creating account</string>
    <string name="HashError">Error generating hashed password</string>

    <!--VALIDATIONS-->
    <string name="ValidationName">Please enter your name</string>
    <string name="ValidationEmail">Please enter your email again</string>
    <string name="ValidationPassword">Please enter your password</string>
    <string name="ValidationConfirmPassword">Please re-enter your password</string>
    <string name="ValidationPasswordsMatch">Passwords do not match</string>

    <!--USER MENU-->
    <string name="CloseSession">Log out</string>
    <string name="NewRoutine">New routine</string>

    <!--LOGIN ACTIVITY-->
    <string name="Login">Log in</string>
    <string name="MailLogin">Your email</string>
    <string name="PassLogin">Password</string>
    <string name="Btn_Login">Log in</string>
    <string name="NewUserTxt">Don’t have an account?</string>

    <!--SKIN TYPE ACTIVITY-->
    <string name="NoIdeaSkin">Don’t know your skin type?</string>
    <string name="NewRoutineSkinType">New routine</string>

    <!--HOUR ACTIVITY-->
    <string name="NoIdeaChoose">Not sure which one to choose?</string>
    <string name="TextButton">Next</string>

    <!--HOUR ACTIVITY SELECTION-->
    <string name="TextView">Morning skincare routine</string>

    <!--RECYCLER VIEW HOUR AND VIEW SKIN-->
    <string name="ButtonText">Back</string>

    <!--REVIEW AND EDIT-->
    <string name="TituloTxRw">You have chosen the following: Do you want to modify anything?</string>
    <string name="ButtonTextRw">Skin type</string>
    <string name="ButtonTextMomentoDia">Time of day</string>
    <string name="ButtonTextTipoSK">Skincare type</string>
    <string name="ButtonTextPresupuesto">Budget</string>
    <string name="ButtonTextEditar">Cancel</string>
    <string name="ButtontextContinuar">Continue</string>

    <!--SKIN CARE TYPE-->
    <string name="TextViewPregunta">What type of skincare do you want?</string>
    <string name="ButtonAvanzar">Next</string>

    <!--SKIN DESCRIPTION-->
    <string name="TextSKD">Characteristics</string>

    <!--SKIN TYPE-->
    <string name="TVConfiguracion">Skin type settings</string>

    <!--HOUR ACTIVITY-->
    <string name="selectYourSchedule">Select your schedule</string>


    <!--LOBBY ACTIVITY-->
    <string name="TVNombre">San Felix de Pablo</string>
    <string name="TVTipoPielUserMenu">Normal skin</string>
    <string name="ButtonTextPerfil">My profile</string>
    <string name="ButtonTextRoutine">New routine</string>
    <string name="ButtonTextRoutines">My routines</string>
    <string name="ButtonTextCalendar">Calendar</string>
    <string name="ButtonSalir">Log out</string>
    <string name="BurguerMenu">Burguer Menu</string>
    <string name="EditPhoto">Edit photo</string>


    <!--CUSTOM ALERT-->
    <string name="TituloTx">Title</string>
    <string name="SubTitulo">Dialog message</string>
    <string name="ButtonCancelar">Cancel</string>
    <string name="ButtonAceptar">Accept</string>

    <!--CUSTOM BUTTON-->
    <string name="TextButtonCustom">Custom Button</string>

    <!--CUSTOM VIEW OPTION ROUTINE-->
    <string name="TitleCustomVoR">Title: </string>
    <string name="SubtitleCustomVoR">Option text</string>

    <!--FRAGMENT CUESTIONARY-->
    <string name="SelectedOption">Select an option</string>
    <string name="RadioButonOpcion1">Option 1</string>
    <string name="RadioButonOpcion2">Option 2</string>
    <string name="RadioButonOpcion3">Option 3</string>
    <string name="RadioButonOpcion4">Option 4</string>

    <!--ITEM PRODUCT-->
    <string name="NombreProducto">Product name</string>
    <string name="PrecioProducto">00.00€</string>

    <!--PROGRESS BAR-->
    <string name="Numero1"> 1</string>
    <string name="Numero2"> 2</string>
    <string name="Numero3"> 3</string>
    <string name="Numero4"> 4</string>
    <string name="Piel">Skin</string>
    <string name="Horario">Schedule</string>
    <string name="Tipo">Routine type</string>
    <string name="Presupuesto">Budget</string>

    <!--BASIC CUSTOMIZED, BASIC ECONOMY, COMPLETE ECONOMIC AND CUSTOMIZED-->
    <string name="Title1Customized">Cleansing</string>
    <string name="Title2Customized">Moisturizing</string>
    <string name="Title3Customized">Toning</string>
    <string name="Title4Customized">Treatment</string>
    <string name="Title5Customized">Sunscreen</string>
    <string name="ButtonCustomized">Continue</string>

    <!--BUDGET ACTIVITY-->
    <string name="BudgetTitle1">Budget</string>

    <!--ACTIVITY FINAL-->
    <string name="Title1Final">You have chosen the following items</string>
    <string name="Title2Final">Summary of previous selections...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ACTIVITY RESUMEN FINAL -->
    <string name="Title1ResumenFinal">Your routine resume</string>
    <string name="SubTitle1ResumenFinal">Resume</string>
    <string name="Valor1ResumenFinal">Total: 0.00€</string>
    <string name="Valor1Boton">Finish</string>

    <!-- FRAGMENT CALENDAR -->
    <string name="CreateEvent">Create event</string>
    <string name="SeeEvent">See event</string>
    <string name="EditEvent">Edit</string>
    <string name="DeleteEvent">Delete</string>



    <!-- TYPE SKIN EXPLAIN -->
    <!-- Hay que ver como usar esto para que no este hardcode -->
    <string-array name="skin_type_description">
        <item>If your skin feels tight, rough, or tends to peel, especially " +
                    "after washing it, you probably have dry skin. This type of skin " +
                    "produces less natural oil than needed to maintain hydration, making " +
                    "it more prone to irritation, redness, and early signs of fine lines. " +
                    "It may have areas with rough texture, lack of radiance, and a " +
                    "constant feeling of dryness. If you notice your skin cracking easily " +
                    "in winter or that it needs constant hydration to feel comfortable, " +
                    "then you have dry skin.
        </item>
        <item>If your skin doesn’t usually feel too oily " +
            "or too dry, you don’t experience peeling or areas with excess shine, and you " +
            "rarely have imperfections, you probably have normal skin. This type of skin has " +
            "a proper balance of oil and hydration, giving it a smooth, even appearance with " +
            "a healthy glow. The pores are small or medium-sized and don’t get clogged easily. " +
            "Although this skin type doesn’t typically present specific issues, maintaining a " +
            "basic routine of cleansing, moisturizing, and sun protection is key to keeping its " +
            "natural balance..
        </item>
        <item>If you notice that your forehead, nose, and " +
            "chin tend to be oilier and shinier, while your cheeks and other areas of your face " +
            "are drier or normal, then you have combination skin. This skin type is very common " +
            "and may have enlarged pores and a tendency to blackheads or pimples in the T-zone, " +
            "while the cheeks may feel tighter or even peel in certain seasons. Identifying which " +
            "parts of your face are oilier and which are drier will help you choose specific " +
            "products to balance your skin without dehydrating it or increasing oil production.
        </item>

    </string-array>
    <string name="fragment_product_title">No products yet</string>


</resources>