<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Contenedor de pasos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="4">

        <!-- Paso 1 -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/step1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_empty"
                android:gravity="center"
                android:text="@string/Numero1"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Piel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"/>
        </LinearLayout>

        <!-- Paso 2 -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/step2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_empty"
                android:gravity="center"
                android:text="@string/Numero2"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Horario"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"/>
        </LinearLayout>

        <!-- Paso 3 -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/step3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_empty"
                android:gravity="center"
                android:text="@string/Numero3"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tipo"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"/>
        </LinearLayout>
        <!-- Paso 4 -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/step4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_empty"
                android:gravity="center"
                android:text="@string/Numero4"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Presupuesto"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>

    <!-- Barra de progreso -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:max="100"
        android:progress="0"
        android:progressTint="#06AB99"
        android:layout_marginTop="10dp"/>

</LinearLayout>
