<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApplication"
    tools:context=".UI.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="face.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/BtnLogin"
            android:text="@string/BtnLogin"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_background"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/BtnRegister"
            android:text="@string/BtnRegister"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>